# mcpico_to_analysis_tree

./: CMakeLists.txt
batch/: batch_run.sh  run.sh
macro/: cut_equal_bins.cc  run_qa.cc
qnanalysis/: mc_corrections.yml  mc_correlations.yml  pT_conservation_corrections.yml  pT_consetvation_correlations.yml  pT_weight_corrections.yml  pT_weight_correlations.yml
qnanalysis/batch/: batch_run.sh  run.sh
qnanalysis/flow/: CMakeLists.txt  main.cc  tracks_processor.cc  tracks_processor.h
src/: convert.cc  converter.cc  converter.h  input_chain.cc  input_chain.h  mc_pico_chain.cc  mc_pico_chain.h  out_tree_manager.cc  out_tree_manager.h  unigen_chain.cc  unigen_chain.h
